# limituj-czas

./: .gitignore  CMakeLists.txt  README.md  changelog  copyright  limituj-czas  limituj-czas.cfg
po/: CMakeLists.txt  pl.po
